// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CodeBlock /> should call snackbar on command copy 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-79elbk"
  >
    <pre
      class="MuiBox-root css-20w2bg"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          pants --pants-bin-name=./pants --pants-version=2.3.0.dev3 --no-dynamic-ui typecheck src/python/toolchain/aws/::
        </div>
        <button
          aria-label="Copy text"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1fx451z-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xcpd0a-MuiSvgIcon-root"
            data-testid="FileCopyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4 6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
            />
          </svg>
        </button>
      </div>
    </pre>
  </div>
  <div
    class="MuiSnackbar-root MuiSnackbar-anchorOriginBottomCenter css-khco8-MuiSnackbar-root"
    role="presentation"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation6 MuiSnackbarContent-root css-mqxpjw-MuiPaper-root-MuiSnackbarContent-root"
      direction="up"
      role="alert"
      style="opacity: 1; transform: scale(1, 1); transition: opacity 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
    >
      <div
        class="MuiSnackbarContent-message css-1exqwzz-MuiSnackbarContent-message"
      >
        Copied
      </div>
      <div
        class="MuiSnackbarContent-action css-1kr9x0n-MuiSnackbarContent-action"
      >
        <button
          aria-label="close"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeSmall css-8qkyxp-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CloseIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CodeBlock /> should convert ANSI text if the option is specified 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-79elbk"
  >
    <pre
      class="MuiBox-root css-20w2bg"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          <code>
            <span
              style="color: rgb(0, 0, 187);"
            >
              hello world
            </span>
          </code>
        </div>
        <button
          aria-label="Copy text"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1fx451z-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xcpd0a-MuiSvgIcon-root"
            data-testid="FileCopyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4 6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
            />
          </svg>
        </button>
      </div>
    </pre>
  </div>
</DocumentFragment>
`;

exports[`<CodeBlock /> should render the component 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-79elbk"
  >
    <pre
      class="MuiBox-root css-20w2bg"
    >
      <div
        class="MuiGrid-root MuiGrid-container css-11lq3yg-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 css-49904w-MuiGrid-root"
        >
          pants --pants-bin-name=./pants --pants-version=2.3.0.dev3 --no-dynamic-ui typecheck src/python/toolchain/aws/::
        </div>
        <button
          aria-label="Copy text"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeLarge css-1fx451z-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-xcpd0a-MuiSvgIcon-root"
            data-testid="FileCopyIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm-1 4 6 6v10c0 1.1-.9 2-2 2H7.99C6.89 23 6 22.1 6 21l.01-14c0-1.1.89-2 1.99-2h7zm-1 7h5.5L14 6.5V12z"
            />
          </svg>
        </button>
      </div>
    </pre>
  </div>
</DocumentFragment>
`;
